--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@ body{
 .app{
   position: relative;
   max-width: 100vw;
-  height: 100%;
+  height: 100vh;
   background-image: url('../src/assets/image/laptop.jpg');
   background-repeat: no-repeat;
   background-size: cover;
