--- a/src/css/users.css
+++ b/src/css/users.css
@@ -4,7 +4,11 @@
 .users-page{
    color: #fff;
    max-width: 100vw;
+   background-color: rgba(0, 0, 0, 0.916);
+   height: 100vh;
 }
+
+/* rgba(0, 0, 0, 0.253) */
 
 .users-page .main .haed .top{
     background-color: #0D6EFD;
@@ -12,6 +16,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px;
+    
 }
 
 .users-page .main .haed .top .one{
@@ -21,6 +26,11 @@
     gap: 5%;
     width: 35vw;
 }
+
+.users-page .main .haed .top .one img {
+    height: 25px;
+}
+
 .users-page .main .haed .top .one h4{
     margin: 0 !important;
     
@@ -32,12 +42,16 @@
     align-items: center;
     gap: 5%;
     width: 35vw;
-    margin-right: 40px !important;
+    margin-right: 30px !important;
 }
 
 .users-page .main .haed .top .two .btn{
     background-color: transparent !important;
     border: none !important;
+}
+
+.users-page .main .haed .top .two .print img{
+    height: 30px;
 }
 
 .users-page .main .haed .top .two .add-btn{
@@ -46,43 +60,92 @@
     display: flex;
     justify-content: space-evenly;
     gap: 10px;
+    align-items: center;
+}
+
+.users-page .main .haed .top .two .add-btn img{ 
+    height: 20px;
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.users-page img{
-    height: 30px;
+.users-page .main .haed .center{
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 10px;
 }
+
+.users-page .main .haed .center .farmer-btn{
+    padding: 10px 37px;
+    background-color: rgba(128, 128, 128, 0.612) !important;
+    border: none !important;
+}
+
+.users-page .main .haed .center .farmer-btn:hover{
+    background-color: red !important;
+}
+
+.users-page .main .haed .center .buyer-btn{
+    padding: 10px 37px; 
+    background-color: rgba(128, 128, 128, 0.612) !important;
+    border: none !important;
+}
+
+.users-page .main .haed .center .buyer-btn:hover{
+    background-color: red !important;
+}
+
+.users-page .main .haed .bottom {
+    padding: 10px;
+}
+
+.users-page .main .haed .bottom .one{
+    display: flex;
+    justify-content: center;
+    max-width: 100vw;
+}
+
+.inputBox_container {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    width: 95vw; 
+    height: 6vh;
+    background-color: #5c6370;
+    border-radius: 12px; 
+  }
+  
+  .search_icon {
+    height: 1em;
+    padding: 0 0.5em 0 0.8em;
+    fill: #abb2bf;
+  }
+  
+  .inputBox {
+    background-color: transparent;
+    color: #ffffff;
+    outline: none;
+    width: 100%;
+    border: 0;
+    padding: 0.5em 1.5em 0.5em 0;
+    font-size: 1em;
+  }
+  
+  ::placeholder {
+    color: #abb2bf;
+  }
+
+  .users-page .main .haed .last .last-first {
+    padding: 10px 0 10px 0;
+  }
+
+  .users-page .main .haed .last .last-first .table{
+    /* caption-side: none !important; */
+    border-collapse: separate !important;
+    background-color: #0D6EFD;
+    padding: 10px !important;
+    /* display: flex;
+    align-items: center; */
+  }
+
