--- a/src/css/users.css
+++ b/src/css/users.css
@@ -151,11 +151,11 @@
   }
 
   .users-page .main .haed .last .last-first .table-one tr .name{
-    text-align: end;
+    text-align: center;
   }
 
   .users-page .main .haed .last .last-first .table-one tr .phone{
-    text-align: end;
+    text-align: center;
   }
 
   .users-page .main .haed .last .last-first .table-one tr .action{
