--- a/src/css/users.css
+++ b/src/css/users.css
@@ -6,7 +6,7 @@
    max-width: 100vw;
    background-color: rgba(0, 0, 0, 0.916);
    height: 100vh;
-   /* overflow: hidden; */
+   overflow: hidden;
 }
 
 /* rgba(0, 0, 0, 0.253) */
@@ -164,11 +164,10 @@
     width: 60px;
   }
 
-  .users-page .main .haed .last .last-first .back table {
+  .users-page .main .haed .last .last-first .back {
     background-color: transparent !important;
-    padding: 100px !important;
-    /* height: 80vh !important; */
-    overflow: hidden;
+    height: 65vh !important;
+    overflow-y: scroll !important;
   }
 
   .table>:not(caption)>*>* { 
