--- a/src/css/users.css
+++ b/src/css/users.css
@@ -156,7 +156,7 @@
   }
 
   .users-page .main .haed .last .last-first .table-one tr .phone{
-    text-align: center;
+    text-align: right;
   }
 
   .users-page .main .haed .last .last-first .table-one tr .action{
